<resources>
    <string name="app_name">BeautyStoreApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">- OR Continue with -</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="note_sign_up">By clicking the Register button, you agree to the public offer</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I Already Have an Account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
    </string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="note_forgot_password">* We will send you a message to set or reset your new password</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_any_product">Search any Product..</string>
    <string name="all">All</string>
    <string name="lips">Lips</string>
    <string name="eyes">Eyes</string>
    <string name="other">Other</string>
    <string name="product_name">Product Name</string>
    <string name="product_detail">Product Detail</string>
    <string name="price">120000</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy">Buy</string>
    <string name="product">Product</string>
    <string name="check_out">Check out</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="address">Address:</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="shopping_list">Shopping List</string>
    <string name="variations">Variations:</string>
    <string name="variations_model">A55</string>
    <string name="total_older">Total Older</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="amount">2</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="desciption">Desciption</string>
    <string name="comment">Comment</string>
    <string name="comment_detail">Đây là nội dung comment. Rất hài lòng với sản phẩm!</string>
    <string name="star">5 sao</string>
    <string name="cmt_name">Nguyễn Văn A</string>
    <string name="total_order">Total Order:</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="pay">Ví tiền</string>
    <string name="cus_care">Chăm sóc khách hàng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="infomation_account">Infomation Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_information">Save Information</string>
</resources>