<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmt_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/comment_detail" />

    <TextView
        android:id="@+id/tvStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:text="@string/star"
        android:textSize="14sp" />

</LinearLayout>