<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingDimen"
    android:orientation="vertical"
    tools:context=".view.SignUpActivity">

    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/username"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="40dp"
            android:autofillHints="username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:padding="8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/confirm_password"
            android:padding="8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/note_sign_up"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_regular" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/create_account"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_semibold"
            android:backgroundTint="@color/kPrimaryColor"
            app:cornerRadius = "@dimen/editTextRadius"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or_continue_with"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_gg"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="27dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/google"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_fb"
                android:layout_width="54dp"
                android:layout_height="54dp"
                app:cardCornerRadius="27dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/i_already_have_an_account"
                android:textAlignment="center"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/kPrimaryColor"
                android:onClick="login"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>