<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".view.InfoAccountActivity">

    <RelativeLayout
        android:id="@+id/reBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/infomation_account"
            android:textAllCaps="true"
            android:textSize="16sp" />
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvAvatar"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="44dp">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avt" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/email"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/name"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/address"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/phone_number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_information"/>

</LinearLayout>