<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingDimen"
    android:orientation="vertical"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/enter_your_email_address"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="40dp"
            android:autofillHints="username"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/note_forgot_password"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_regular" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/submit"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_semibold"
            android:backgroundTint="@color/kPrimaryColor"
            app:cornerRadius = "@dimen/editTextRadius"/>

    </LinearLayout>

</LinearLayout>