<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cvCartProduct"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="168dp"
                android:layout_height="168dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:padding="24dp"
                android:src="@drawable/product" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/star"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvPriceProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/price"
                    android:textColor="@color/kPrimaryColor"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvDecrement"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/kPrimaryColor"
                        app:cardCornerRadius="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/decrement"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/amount"
                        android:textColor="@color/kPrimaryColor"
                        android:textSize="16sp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvIncrement"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:backgroundTint="@color/kPrimaryColor"
                        app:cardCornerRadius="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/increment"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/total_order"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/total_order"
                android:textColor="@color/kPrimaryColor"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>