<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="@dimen/editTextRadius">

    <LinearLayout
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/product3"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_prdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/product_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_prdDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/product_detail"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_prdPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/price"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_prdRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/price"
            android:textSize="12sp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>

