<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".view.SettingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/setting"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="true"
        android:textSize="16sp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvUser"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        app:cardCornerRadius="44dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avt" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp">
        <RelativeLayout
            android:id="@+id/rvInfoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/imgUserSetting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_user_setting"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgUserSetting"
                android:text="@string/info_account"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/imgPay"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_pay"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgPay"
                android:text="@string/pay"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/imgCusCare"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_cus_care"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgCusCare"
                android:text="@string/cus_care"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/imgPrivacyPolicy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_privacy"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgPrivacyPolicy"
                android:text="@string/privacy_policy"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_out"/>

</LinearLayout>